<resources>
    <string name="app_name">تابع</string>
    <string name="action_settings">Settings</string>
    <string name="loading">تحميل..</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">تسجيل الدخول</string>
    <string name="login_parent">برجاء تسجيل دخول أولياء الامور</string>
    <string name="user_name">أسم المستخدم</string>
    <string name="user_password">كلمة المرور</string>
    <string name="remember_me">تذكرني</string>
    <string name="loss_password">فقدت كلمة المرور..</string>
    <string name="press_here"><u>أضغط هنا</u></string>
    <string name="login_button">تسجيل الدخول</string>
    <string name="add_new_account">إنشاء حساب جديد</string>
    <string name="title_activity_registeration">RegisterationActivity</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="register_account">تسجيل عضوية</string>
    <string name="fill_data">برجاء ملئ بيانات النموذج التالى</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="email_address">البريد الألكتروني</string>
    <string name="accept_all_right">اوافق على كافة الشروط والأحكام</string>
    <string name="title_activity_ask_about_student">AskAboutStudent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_result_of_ask_about_student">ResultOfAskAboutStudent</string>
    <string name="title_activity_absent_doc">AbsentDoc</string>
    <string name="title_activity_infraction_doc">InfractionDoc</string>
    <string name="title_activity_student_details">StudentDetails</string>
    <string name="title_activity_ask_about_table">AskAboutTable</string>
    <string name="title_activity_table_tabs">TableTabs</string>
    <string name="title_activity_contact_with_school">ContactWithSchool</string>
    <string name="title_activity_about_tab3e">AboutTab3e</string>
    <string name="title_activity_absent_roles">AbsentRoles</string>
    <string name="ask_about_student">إستعلام عن طالب</string>
    <string name="tables">الجداول الدراسية</string>
    <string name="contact">للتواصل مع المدرسة</string>
    <string name="absent_list">لائحة الغياب</string>
    <string name="infection_list">لائحة المخالفات</string>
    <string name="about_tab3e">عن تابع</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="ask_about_student_title">إستعلام عن طالب</string>
    <string name="show_data_of_student">عرض البيانات</string>
    <string name="stu_id_num">رقم بطاقة الطالب</string>
    <string name="stu_name">أسم الطالب</string>
    <string name="Ask_result_text">نتائج الإستعلام</string>
    <string name="student_degres">إحصائيات الطالب</string>
    <string name="contact_with_school">للتواصل مع إدارة المدرسة</string>
    <string name="to_know_available">"لمعرفة وسائل الإتصال المتاحة  "</string>
    <string name="text_withot_cuse">بدون عذر</string>
    <string name="text_cuse">بعذر سابق</string>
    <string name="absent_doc">سجل الغياب</string>
    <string name="title_activity_infraction_roles">InfractionRoles</string>
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="error_string">حدث خطأ</string>
    <string name="no_internet">لا يوجد أتصال بالأنترنت</string>
    <string name="custom_notification">لديك إشعار جديد</string>
    <string name="title_activity_children_list">ChildrenListActivity</string>
    <string name="child_list">قائمة الابناء</string>
</resources>
