<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tab3e.activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/inside"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@null"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_log_page_icon"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/login_text"
                style="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/mainTextBlue"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="13sp"
                android:textColor="@color/secondTextGray"/>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_re_username"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:textAlignment="viewStart"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat"
                    android:inputType="text"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_re_password"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:padding="3dp"
                android:textColor="@color/colorAccent"
                android:textSize="13sp"
                android:button="@drawable/checkbox_selector"
                android:text="@string/remember_me"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="13sp"
                android:gravity="end|center_vertical"
                android:text="@string/loss_password"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/press_here"
                android:textColor="@color/text_red"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp">
                </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp">
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
