<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tab3e.activity.LoginActivity"
    tools:showIn="@layout/activity_registration">

    <ImageView
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/inside"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@null"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/ic_re_page_icon"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register_account"
                style="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:textColor="@color/mainTextBlue"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/fill_data"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="13sp"
                android:textColor="@color/secondTextGray"/>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_re_username"
                    android:layout_gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/user_name"
                    android:textAlignment="viewStart"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat"
                    android:inputType="text"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_co_title"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_co_email"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_re_password"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_shape_gray">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_re_password"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:layout_margin="2dp"
                    />
                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="#00000000"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textSize="15sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:textColor="@color/mainTextBlue"
                    android:textSize="13sp"
                    android:checked="true"
                    android:button="@drawable/checkbox_selector"
                    android:text="@string/accept_all_right"/>

            </LinearLayout>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:foreground="?selectableItemBackground"
                card_view:cardBackgroundColor="@color/button_green_light"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                card_view:cardCornerRadius="4dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#FFF"
                        android:text="@string/add_new_account"/>
                    <ImageView
                        android:contentDescription="@null"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_pro_btn_arrow"
                        android:layout_gravity="center_vertical"
                        android:padding="4dp"
                        android:background="@drawable/circle_shape_green"
                        android:layout_margin="4dp"
                        />
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</FrameLayout>
